--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="th">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TNSU REC System</title>
-    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/th/e/e0/TNSU_Logo.png" />
+    <link rel="icon" href="https://lh3.googleusercontent.com/d/1cRjmEPgytoyDLRYvoegnN3OaqrayaF-c" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
