feat: Add document generation and reporting features
- Implemented PDF and DOCX generation for user manuals and reports.
- Enhanced reporting page with data filtering and export options.
- Improved error handling for user authentication.
- Added new dependencies for document generation (docx, html2canvas, jspdf).

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "recharts": "https://esm.sh/recharts@^2.12.7",
-    "firebase/": "https://esm.sh/firebase@^12.9.0/"
+    "firebase/": "https://esm.sh/firebase@^12.9.0/",
+    "docx": "https://esm.sh/docx@8.5.0",
+    "html2canvas": "https://esm.sh/html2canvas@1.4.1",
+    "jspdf": "https://esm.sh/jspdf@2.5.1"
   }
 }
 </script>
